[package]
name = "liquid-stake"
version.workspace = true
edition = "2021"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["CriptoMX"]

[workspace.dependencies]
liquidstake-state.workspace = true
gstd.workspace = true
gmeta.workspace = true
gtest.workspace = true
gclient.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io = { path = "./io" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "175f69b7" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "175f69b7" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[build-dependencies]
io = { path = "./io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "175f69b7" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "175f69b7" }

[dev-dependencies]
state = { path = "state" }
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "175f69b7" }
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "175f69b7" }
gclient = { git = "https://github.com/gear-tech/gear.git", rev = "946ac47" }

[features]
binary-vendor = []
wasm-opt = ["gear-wasm-builder/wasm-opt"]
default = ["binary-vendor", "wasm-opt"]