[package]
name = "state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "v1.2.0" }
gmeta = { git = "https://github.com/gear-tech/gear.git", rev = "v1.2.0", features = ["codegen"] }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
io = { path = "../io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git",rev = "v1.2.0", features = ["metawasm"] }

[features]
binary-vendor = []
default = ["binary-vendor"]